Shared: UnsafeTicketLock Debug implementation without `I: Debug`
Before this UnsafeTicketLock is only Debug if InterruptState is Debug.
However this is not necessary as the InterruptState is only stored as a
PhantomData and therefor not part of the Debug output.

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,6 +8,7 @@ default= []
 no-unicode-log = []
 
 [dependencies]
+derive-where.workspace = true
 log.workspace = true
 paste.workspace = true
 simple_endian.workspace = true
