FS: create directory

--- a/wasabi-fs/Cargo.toml
+++ b/wasabi-fs/Cargo.toml
@@ -17,6 +17,8 @@ testing-derive.workspace = true
 bit_field.workspace = true
 bitflags.workspace = true
 crossbeam-epoch.workspace = true
+derive-where.workspace = true
+hashbrown.workspace = true
 linkme.workspace = true
 log.workspace = true
 nonmax.workspace = true
