--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [features]
-default = ["freeze-heap"]
+default = []
 
 fixed-kernel-vaddr = []
 no-color = ["logger/no-color"]  
