change NonMax to my own crate

--- a/wasabi-fs/Cargo.toml
+++ b/wasabi-fs/Cargo.toml
@@ -21,7 +21,7 @@ derive-where.workspace = true
 hashbrown.workspace = true
 linkme.workspace = true
 log.workspace = true
-nonmax.workspace = true
+nonmaxunsigned.workspace = true
 simple_endian.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
