--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ itertools = { version = "0.14.0", default-features = false, features = ["use_all
 libm = "0.2.11"
 linkme = "0.3.31"
 log = "0.4.22"
+nonmaxunsigned = { version = "2.0.0", features = [ "endian-conversion" ] }
 noto-sans-mono-bitmap = { version = "0.3.0", features = ["unicode-latin-1-supplement", "unicode-specials"]}
 paste = "1.0.12"
 proc-macro2 = "1.0.92"
@@ -71,9 +72,6 @@ walkdir = "2.5"
 # TODO use upstream version once merged and released
 # TODO create PR for nonmax
 simple_endian = { version = "0.3.2", git = "https://github.com/Wasabi375/simple-endian-rs.git", branch = "non_zero"}
-
-# TODO use upstream version once I created a PR and it was merged, waiting on simple_endian
-nonmax = { version = "0.5.5", git = "https://github.com/Wasabi375/nonmax-fork.git", branch = "simple_endian", default-features = false , features = ["simple_endian"] }
 
 #  TODO use upstream once new version is released
 derive_builder = { version = "0.20.0", git = "https://github.com/Wasabi375/rust-derive-builder", branch = "owned_custom_default", default-features = false}
