Small code cleanup for testing framework

--- a/testing/test-tests/Cargo.toml
+++ b/testing/test-tests/Cargo.toml
@@ -14,3 +14,6 @@ testing-derive.workspace = true
 
 linkme.workspace = true
 log.workspace = true
+
+[dev-dependencies]
+host-shared = { workspace = true, features = [ "test" ] }
