--- a/forked-libs/staticvec/Cargo.toml
+++ b/forked-libs/staticvec/Cargo.toml
@@ -10,6 +10,6 @@ alloc = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shared = { path = "../shared" }
+shared.workspace = true
 serde = { version = "1.0.215", features = [ "derive" ], optional = true }
 
