--- a/libs/shared/derive/Cargo.toml
+++ b/libs/shared/derive/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shared = { path = "../shared" }
+shared = { path = "../" }
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
