--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,12 @@ members = [
 
     "host-libs/shared",
 
+    "libs/block-device",
+    "libs/gpt",
     "libs/interrupt-fn-builder",
     "libs/logger",
     "libs/shared",
     "libs/shared/derive",
-    "libs/block-device",
 
     "modules/wasabi-fs",
     "modules/wasabi-fs/fuse",
@@ -41,7 +42,7 @@ members = [
     "testing/test-tests",
 
     "wasabi-kernel",
-    "wasabi-test",
+    "wasabi-test", 
 ]
 
 [workspace.package]
@@ -50,11 +51,12 @@ edition = "2024"
 
 [workspace.dependencies]
 #libs
-shared = { path = "libs/shared" }
-shared-derive = { path = "libs/shared/derive" }
+block-device = { path = "libs/block-device" }
+gpt = { path = "libs/gpt" }
 interrupt-fn-builder = { path = "libs/interrupt-fn-builder" }
 logger = { path = "libs/logger" }
-block-device = { path = "libs/block-device" }
+shared = { path = "libs/shared" }
+shared-derive = { path = "libs/shared/derive" }
 
 # modules
 wfs = { path = "modules/wasabi-fs" }
@@ -75,6 +77,7 @@ staticvec = { path = "forked-libs/staticvec" }
 anyhow =  "1.0.94"
 bit_field = "0.10.2"
 bitflags = "2.6.0"
+crc32fast = { version = "1.5.0", default-features = false }
 crossbeam-epoch = { version = "0.9.18", default-features = false, features = ["alloc"] }
 derive-where = "1.2.7"
 hashbrown = "0.15.2"
