--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -24,6 +24,8 @@ shared-derive.workspace = true
 staticvec.workspace = true
 testing = { workspace = true, optional = true }
 
+block-device.workspace = true
+
 bitflags.workspace = true
 bit_field.workspace = true
 crossbeam-epoch.workspace = true
