--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -40,7 +40,7 @@ paste.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
 uart_16550.workspace = true
-volatile = "0.4.6"
+volatile.workspace = true
 x86_64.workspace = true
 hashbrown.workspace = true
 derive-where.workspace = true
