TaskSystem: Introduce initial version
this does not yet support timer based context switching.
Right now the task switches after a task terminates.

--- a/wasabi-kernel/Cargo.toml
+++ b/wasabi-kernel/Cargo.toml
@@ -29,6 +29,7 @@ gpt.workspace = true
 
 bitflags.workspace = true
 bit_field.workspace = true
+const-default.workspace = true
 crossbeam-epoch.workspace = true
 bootloader_api.workspace = true
 derive_builder.workspace = true
