--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ bit_field = "0.10.2"
 bitflags = "2.6.0"
 bootloader = {  version = "0.11.12", default-features = false, features = ["uefi"] }
 bootloader_api = {  version = "0.11.12" }
+const-default = { version = "1.0", features = ["derive"] }
 crc32fast = { version = "1.5.0", default-features = false }
 crossbeam-epoch = { version = "0.9.18", default-features = false, features = ["alloc"] }
 derive-where = "1.2.7"
